--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="ex3.js"></script>
+    <script src="ex1.js"></script>
+    <script src="ex2.js"></script>
+    <script src="ex3.js"></script><!-- calling all my files to run in my HTML-->
+    <script src="ex4.js"></script>
+    <script src="ex5.js"></script>
+    <script src="EX6.js"></script>
+    <script src="EX7.js"></script>
 </head>
 <body>
 
